Improved compatibility with Mendix >= 7.23.3 due to AdoptOpenJDK by removing dependency on javax.xml. Added dependency on apache.commons.codec for Base64 encoding of public keys. Upgraded to 7.23.0 to be downloadable from Mendix 8, but lost compatibility with < 7.23 due to this.